--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   maven-build:
     #runs-on: self-hosted
+    runs-on: ubuntu:latest
     steps:
       - name: checkout the code
         uses: actions/checkout@v3
